--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <div class="music-container">
-            <img src="images/cover1.jpg" alt="Song Cover" class="cover">
+            <img src="Picsart_25-02-07_17-03-22-707.jpg" alt="Song Cover" class="cover">
             <h2 class="song-title">Song Name</h2>
             <audio controls>
                 <source src="songs/song1.mp3" type="audio/mp3">
