--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+8<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,9 +14,9 @@
     <main>
         <div class="music-container">
             <img src="Picsart_25-02-07_17-03-22-707.jpg" alt="Song Cover" class="cover">
-            <h2 class="song-title">Song Name</h2>
+            <h2 class="song-title">যদি আবার </h2>
             <audio controls>
-                <source src="songs/song1.mp3" type="audio/mp3">
+                <source src="_Jodi Abar_ ( যদি আবার ) OFFICIAL MUSIC VIDEO _ Angel Noor _Bangla new song 2024(MP3_160K).mp3" type="audio/mp3">
                 Your browser does not support the audio element.
             </audio>
         </div>
