--- a/index.html
+++ b/index.html
@@ -25,9 +25,35 @@
             <h3>Lyrics</h3>
             <p>
                 [Intro] <br>
-                Lorem ipsum dolor sit amet... <br>
+             যদি আবার <br>
                 [Chorus] <br>
-                Consectetur adipiscing elit...
+                মেঘলা দিন
+তোমাকে ভেবে কেটে যায় রঙিন
+ফেলে আসা ভালবাসা মলিন
+তবুও মনে পড়ে যায়....
+চায়ের কাপ
+তোর আমার যতো স্মৃতির চাপ
+হিসেব মেলানো কঠিন...
+যদি আবার ,দেখা হয় তোমার আমার
+ভুলে যেও সব অভিমান
+ছিলো যতো ঝণ
+আছি আজো ,আমি শুধুই তোমার
+জানি তুমি অন্য কারো
+আমি দিশাহীন।
+আমার মন খারাপের সুর
+মিশে গেছে যতোদুর।
+তুমি শুনতে কি পাও ,এই গান।
+যাক না দিন এমন, তোমাকে ভেবে ভেবে
+তবে হোক আজই প্রতিক্ষার অবসান।
+লুকিয়ে থাক শীতের কুয়াশায় ভেজা দুচোখ।
+ভুলে যাওয়া যতো গল্প আজ
+প্রেম হয়ে ফিরে যায়।
+আড়াল হোক লুকিয়ে রাখা যতো কষ্ট সব।
+শিশির হয়ে ফিরে যাক।
+যদি আবার দেখা হয় তোমার আমার
+মনে করো সেই মন ভাঙা গল্প-গান
+আছি আজও আমি শুধুই তোমার ,জানি তুমি অন্য কারো
+আমি দিশাহীন।
             </p>
         </div>
     </main>
